Web MIDI: MIDIPort::open should be handled asynchronously

Current implementation dispatch MIDIConnectionEvent synchronously,
but this should be done asynchronously according to the spec.

Note: layout tests fail because some of them expects synchronous results

BUG=735058

Change-Id: If49d588e36e092aa6fc40625fd88483c9ae1719d